# vibe-profiler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
src/vibe_profiler/: __init__.py  config.py  exceptions.py  pipeline.py  progress.py  report.py  serialization.py  utils.py
src/vibe_profiler/analyzer/: __init__.py  business_key.py  historization.py  relationship.py  similarity.py
src/vibe_profiler/codegen/: __init__.py  config.py  dbt_generator.py
src/vibe_profiler/codegen/templates/: effectivity_satellite.sql.j2  hub.sql.j2  link.sql.j2  pre_stage.sql.j2  satellite.sql.j2  schema.yml.j2  sources.yml.j2  staging.sql.j2
src/vibe_profiler/models/: __init__.py  analysis.py  profile.py  temporal.py  vault_spec.py
src/vibe_profiler/profiler/: __init__.py  auto_config.py  batch_ops.py  column_stats.py  engine.py  pattern_detector.py  sampling.py  temporal_detector.py  type_inference.py
src/vibe_profiler/vault/: __init__.py  suggestion_engine.py
tests/: conftest.py  test_pipeline.py  test_report.py  test_serialization.py  test_utils.py
tests/test_analyzer/: test_business_key.py  test_historization.py  test_similarity.py
tests/test_codegen/: test_dbt_generator.py
tests/test_profiler/: test_auto_config.py  test_engine.py  test_temporal_detector.py  test_type_inference.py
tests/test_vault/: test_suggestion_engine.py
